[project]
name = "mcpdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.31.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langchain-groq>=0.1.0",
    "mcp-use>=1.3.10",
    "python-dotenv>=1.0.0",
]
